--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ text-aline:center;
     position: absolute;
     top: 0%;
     color: #69a3e1ff;
-    font-size: 22px;
+    font-size: 20px;
     animation: fall linear infinite;
 }
 
@@ -125,10 +125,53 @@ text-aline:center;
 .snowflake:nth-child(10) { left: 95%; animation-duration: 6s; animation-delay: 9s; }
 
 .signature {
-    margin-top: 20px;
+    margin-top: 10px;
     font-style: italic;
 }
 
 .hidden {
     display: none;
-      }
+}
+
+.content {
+    display: flex;
+    justify-content: center;
+    
+    align-items: center;
+    margin-top: 30%;
+    
+}
+
+.snow-blocks{
+    background: url(fon.jpg) no-repeat #0182c6;
+    position: relative;
+    height: 600px;
+    width: 100%;
+    max-width: 1200px;
+    overflow: hidden;
+    background-size:cover;
+}
+.snow1{
+   background-image: url(snow1.png);
+   position:absolute;
+   width: 100%;
+    height:600px;
+    animation: snow1 18s linear infinite;    
+}
+.snow2{
+    background-image: url(snow2.png),url(snow3.png);
+    animation: snow2 10s linear infinite;
+    width: 100%;
+    height:600px;
+    position:absolute;
+}
+@keyframes snow2{
+    0%{background-position: 0 0, 0 0;}
+    100%{background-position: 10% 600px, 10% 600px;}
+}
+@keyframes snow1{
+    from{background-position: 0 -300px;}
+    20% {background-position: 20% -100px;}
+    40% {background-position: 30% 100px;}
+    to{background-position: 20% 700px;}
+    }
